[package]
name = "binarycookies"
version = "0.1.3"
edition = "2021"
authors = ["JohnnyLeaf <fxtafreeman@163.com>"]
description = "A package reader for Mac os cookie file"
readme = "README.md"
keywords = ["cookies", "webkit", "cookies", "binarycookies", "safari"]
repository = "https://github.com/findre/binarycookies-reader"
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "binary_cookies"
path = "src/libs.rs"

[dependencies]
